--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/VehicleDealership?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/VehicleDealership?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=ergasia_kat
+spring.datasource.password=pass123
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
