--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/VehicleDealership?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/VehicleDealership?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=pass123
+spring.sql.init.schema-locations = classpath:/schema.sql
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 server.max-http-header-size=65536
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+
 hibernate.hbm2ddl.auto=create
 
 spring.jpa.open-in-view=false
@@ -22,3 +19,6 @@ spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.sql.init.mode=always
